--- a/views/accueil/afficAccueil.phtml
+++ b/views/accueil/afficAccueil.phtml
@@ -31,7 +31,7 @@
     } else {
         echo "<div class='m-4'>";
         echo "<h2>Nos articles les plus vendus</h2>";
-        echo "<div id='main_affic'>";
+        echo "<div class='liste_produits'>";
         /** @var array $produits */
         foreach($produits as $produit) {
             include(VUES . "/produit/ficheProduit.inc");
